--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:create] %>
 <%= flash[:updateb] %>
 <%= render 'usernewbook', newbook: @newbook, user: @user %>
 
@@ -7,11 +8,18 @@
 <div>
   <p><%= @book.title %></p>
   <p><%= @book.body %></p>
-  <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p><%= @book.user.name %></p>
+  <p>投稿ユーザー画像：
+    <%= link_to user_path(@book.user.id) do %>
+      <%= image_tag @book.user.get_profile_image(100,100) %></p>
+    <% end %>
+  <p>
+    <%= link_to user_path(@book.user.id) do %>
+      <%= @book.user.name %>
+    <% end %>
+  </p>
   <% if @book.user == current_user %>
-    <%= link_to "Destroy", book_path(@book), method: :delete %>
-    <%= link_to "edit", edit_book_path(@book.id) %>
+    <p class="btn btn-success"><%= link_to "Edit", edit_book_path(@book.id.to_s) %></p>
+    <p class="btn btn-danger"><%= link_to "Destroy", book_path(@book), method: :delete %></p>
   <% end %>
 
 </div>
