--- a/app/views/books/_usernewbook.html.erb
+++ b/app/views/books/_usernewbook.html.erb
@@ -1,33 +1,34 @@
-  <h1>User info</h1>
-  <div class="col-lg-4">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th><%= image_tag user.get_profile_image(100,100) %></th>
-          <th colspan="1"></th>
-        </tr>
-      </thead>
+  <div class="col-md-3">
+    <h2>User info</h2>
+    <div class="img"><%= image_tag user.get_profile_image(100,100) %></div>
+    <table class="table">
       <tbody>
+        <tr></tr>
         <tr>
-          <td>name</td>
-          <td><%= user.name %></td>
+	        <th>name</th>
+	        <th><%= user.name %></th>
         </tr>
         <tr>
-          <td>introduction</td>
-          <td><%= user.introduction %></td>
+      	  <th>introduction</th>
+      	  <th><%= user.introduction %></th>
         </tr>
       </tbody>
-          <% if user == current_user %>
-            <p><%= link_to "Edit Profile", edit_user_path(user) %></p>
-          <% end %>
+    </table>
+    <div class="row">
+      <p><%= link_to "edit user", edit_user_path(user), class: "btn btn-outline-secondary" %></p>
     </div>
-    <h1>New book</h1>
+    <h2 class="mt-3">New book</h2>
     <%= form_with model: newbook do |f| %>
-
-      <h4>Title</h4>
-        <%= f.text_field :title %>
-      <h4>Opinion</h4>
-        <%= f.text_area :body %>
-      <%= f.submit 'Create Book' %>
+      <div class="form-group">
+        <h4>Title</h4>
+          <%= f.text_field :title %>
+      </div>
+      <div class="form-group">
+        <h4>Opinion</h4>
+          <%= f.text_area :body %>
+      </div>
+      <div class="form-group">
+        <%= f.submit 'Create Book', class: "btn btn-success" %>
+      </div>
     <% end %>
   </div>
