--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:errorudb] %>
 <h1>Editing Book</h1>
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
@@ -11,3 +12,6 @@
   <%= f.submit 'Update Book' %>
 
 <% end %>
+<%= link_to "Show", book_path(@book.id) %>
+ |
+<%= link_to "Back", books_path %>
