--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,11 @@
   </div>
   <% @books.each do |book| %>
     <div>
-      <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
+      <p>投稿ユーザー画像：
+        <%= link_to user_path(book.user.id) do %>
+        　<%= image_tag book.user.get_profile_image(100,100) %>
+      　<% end %>
+      </p>
       <p>
         <%= link_to book_path(book.id) do %>
           <%= book.title %>
