--- a/app/views/books/_usernewbook.html.erb
+++ b/app/views/books/_usernewbook.html.erb
@@ -15,7 +15,11 @@
       </tbody>
     </table>
     <div class="row">
-      <p><%= link_to "edit user", edit_user_path(user), class: "btn btn-outline-secondary" %></p>
+      <li>
+        <%= link_to(edit_user_path(user), class:"btn btn-outline-secondary btn-block") do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
+      </li>
     </div>
     <h2 class="mt-3">New book</h2>
     <%= form_with model: newbook do |f| %>
