--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,31 +1,47 @@
-<div class="container">
-<%= flash[:create] %>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this obj from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-  <div class="row">
-    <%= render 'usernewbook', newbook: @book, user: @user %>
-  </div>
-  <% @books.each do |book| %>
-    <div>
-      <p>投稿ユーザー画像：
-        <%= link_to user_path(book.user.id) do %>
-        　<%= image_tag book.user.get_profile_image(100,100) %>
-      　<% end %>
-      </p>
-      <p>
-        <%= link_to book_path(book.id) do %>
-          <%= book.title %>
-        <% end %>
-      </p>
-      <p><%= book.body %></p>
-    </div>
+<main>
+  <%= flash[:create] %>
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %>errors prohibited this obj from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
   <% end %>
-  <%= paginate @books %>
-</div>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <%= render 'usernewbook', newbook: @book, user: @user %>
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                　<%= image_tag book.user.get_profile_image(100,100) %>
+              　<% end %>
+              </td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                  <%= book.title %>
+                <% end %>
+              </td>
+              <td><%= book.body %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= paginate @books %>
+      </div>
+    </div>
+  </div>
+</main>
