--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,29 @@
-<%= render 'books/usernewbook', newbook: @book, user: @user %>
-
-<% @users.each do |user| %>
-  <div>
-    <p>投稿ユーザー画像：<%= image_tag user.get_profile_image(100,100) %></p>
-    <p><%= user.name %></p>
-    <p><%= link_to "Show", user_path(user.id) %></p>
+<main>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <%= render 'books/usernewbook', newbook: @book, user: @user %>
+      <div class="col-md-8 offset-md-1">
+        <h2>Users</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>image</th>
+              <th>name</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @users.each do |user| %>
+            <tr>
+              <td><%= image_tag user.get_profile_image(40,40) %></td>
+              <td><%= user.name %></td>
+              <td><%= link_to "Show", user_path(user.id) %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= paginate @users %>
+      </div>
+    </div>
   </div>
-<% end %>
-<%= paginate @users %>
+</main>
