--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,43 +1,42 @@
-<body>
-  <main>
-    <%= render 'books/usernewbook', newbook: @book, user: @user %>
-    <%= flash[:login] %>
-    <%= flash[:updateu] %>
-
-    <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-      <table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+<main>
+  <%= flash[:login] %>
+  <%= flash[:updateu] %>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <%= render 'books/usernewbook', newbook: @book, user: @user %>
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                  <%= image_tag book.user.get_profile_image(40,40) %></p>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                  <%= book.title %>
+                <% end %>
+              </td>
+              <td>
+                <%= book.body %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= paginate @books %>
+      </div>
     </div>
-
-    <% @books.each do |book| %>
-
-    <div>
-      <%= link_to book_path(book.id) do %>
-
-      <% end %>
-      <p>投稿ユーザー画像：
-        <%= link_to user_path(book.user.id) do %>
-          <%= image_tag book.user.get_profile_image(100,100) %></p>
-        <% end %>
-      <p>
-        <%= link_to book_path(book.id) do %>
-          <%= book.title %>
-        <% end %>
-      </p>
-      <p>Opinion：<%= book.body %></p>
-      <p>ユーザーネーム：<%= book.user.name %></p>
-    </div>
-    <% end %>
-    <%= paginate @books %>
-  </main>
-</body>
+  </div>
+</main>
